--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,35 +70,49 @@ services:
     ports:
       - 8443:8443
     volumes:
-      - ./hadoop_config:/opt/hadoop_config # Mount Hadoop configuration files
+      - ./nifi_volume:/opt/hadoop_config/
     depends_on:
       - broker01
 
   namenode:
-    image: apache/hadoop:3
-    hostname: namenode
-    command: [ "hdfs", "namenode" ]
+    image: bde2020/hadoop-namenode:2.0.0-hadoop3.2.1-java8
+    container_name: namenode
     ports:
+      - 9000:9000
       - 9870:9870
-    env_file:
-      - ./config
     environment:
-      ENSURE_NAMENODE_DIR: "/tmp/hadoop-root/dfs/name"
-  datanode:
-    image: apache/hadoop:3
-    command: [ "hdfs", "datanode" ]
+      - CLUSTER_NAME=test
     env_file:
-      - ./config
-  resourcemanager:
-    image: apache/hadoop:3
-    hostname: resourcemanager
-    command: [ "yarn", "resourcemanager" ]
+      - ./hadoop.env
+
+  datanode1:
+    image: bde2020/hadoop-datanode:2.0.0-hadoop3.2.1-java8
+    container_name: datanode1
     ports:
-      - 8088:8088
+      - 9864:9864
+      - 9866:9866
+    depends_on:
+      - namenode
     env_file:
-      - ./config
-  nodemanager:
-    image: apache/hadoop:3
-    command: [ "yarn", "nodemanager" ]
-    env_file:
-      - ./config
+      - ./hadoop.env
+    environment:
+      SERVICE_PRECONDITION: "namenode:9870"
+
+  hue:
+    image: gethue/hue
+    container_name: hue
+    ports:
+      - 8000:8888 # WebUI
+    depends_on:
+      - namenode
+
+  spark-notebook:
+    image: jupyter/pyspark-notebook
+    command: start-notebook.sh --ServerApp.password='sha1:d2887803f259:31c1bd6d04cd68c3317e88081a6b2a89a8f7f30b'
+    ports:
+      - 8888:8888
+      - 4040:4040
+    depends_on:
+      - namenode
+    volumes:
+      - ./spark-notebooks:/home/jovyan/work
